--- a/Datepicker.html
+++ b/Datepicker.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>jQuery UI Datepicker - Default functionality</title>
   <link rel="stylesheet" href="jquery-ui.css">
-  <script src="jquery-1.12.4.js"></script>
+  <script src="jquery-1.12-4.js"></script>
   <script src="jquery-ui.js"></script>
   <script>
   $( function() {
